tests/wpt/tests/third_party/test262/test/language/comments/S7.4_A4_T1.js
// Copyright 2009 the Sputnik authors.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
info: Single and Multi line comments are used together
es5id: 7.4_A4_T1
description: Try use 2 close comment tags
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

/*CHECK#1*/

/* var*/
x*/
